sla-platform/deploy/k8s/05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sla-platform
  labels:
    app: sla-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sla-frontend
  template:
    metadata:
      labels:
        app: sla-frontend
    spec:
      containers:
        - name: frontend
          image: sla-platform/frontend:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sla-platform
spec:
  selector:
    app: sla-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
